tests/valid/borrow/linear_mut_ref_binding.facet
fn f(mut x: unrestricted isize) -> unrestricted () {
    let mut r = (&mut x) in
    (*r = 1)
}
