tests/invalid/borrow_conflict/unrestricted_root_read_while_mut_borrowed.facet
fn f(mut x: unrestricted isize) -> unrestricted isize {
    let r: affine &mut unrestricted isize = (&mut x) in
    x
}
